@@ -9,7 +9,8 @@
 
 <h2><a name="chmod">Chmod</a></h2>
 <h3>Description</h3>
-<p>Changes the permissions of a file or all files inside specified directories. Right now it has effect only under Unix.
+<p>Changes the permissions of a file or all files inside specified
+directories. Right now it has effect only under Unix or NonStop (Tandem).
 The permissions are also UNIX style, like the argument for the chmod command.</p>
 <p>See the section on <a href="../dirtasks.html#directorybasedtasks">directory based
 tasks</a>, on how the inclusion/exclusion of files works, and how to
@@ -102,7 +103,7 @@ below any directory named trial) writable for members of the same
 group on a UNIX system. In addition all files belonging to a FileSet
 with <code>id</code> <code>other.shared.sources</code> get the same
 permissions.</p>
-<hr><p align="center">Copyright &copy; 2000-2002 Apache Software Foundation. All rights
+<hr><p align="center">Copyright &copy; 2000-2003 Apache Software Foundation. All rights
 Reserved.</p>
 
 </body>
