@@ -92,6 +92,7 @@ the tests succeed.
   <li>unix (for all Unix and Unix-like operating systems)</li>
   <li>netware (for Novell NetWare)</li>
   <li>os/2 (for OS/2)</li>
+  <li>tandem (for HP's NonStop - formerly Tandem)</li>
   <li>win9x for Microsoft Windows 95 and 98</li>
   <li>z/os for z/OS and OS/390</li>
   <li>os/400 for OS/400</li>
@@ -315,7 +316,7 @@ that is "true","yes", or "on"</p>
 </table>
 
 <hr>
-<p align="center">Copyright &copy; 2001-2002 Apache Software
+<p align="center">Copyright &copy; 2001-2003 Apache Software
 Foundation. All rights Reserved.</p>
 
 </body>
