@@ -31,7 +31,7 @@ drive letters to Unix paths, and vice-versa.</p>
     <td valign="top">targetos</td>
     <td valign="top">
         The target architecture.  Must be one of 'unix', 'windows', 
-        'netware' or 'os/2'.
+        'netware', 'tandem' or 'os/2'.
         This is a shorthand mechanism for specifying both
         <code>pathsep</code> and <code>dirsep</code>
         according to the specified target architecture.
@@ -176,7 +176,7 @@ list of files.
 </p>
 
 <hr>
-<p align="center">Copyright &copy; 2001-2002 Apache Software Foundation.
+<p align="center">Copyright &copy; 2001-2003 Apache Software Foundation.
 All rights Reserved.</p>
 </body>
 </html>
