@@ -1,7 +1,7 @@
 /*
  * The Apache Software License, Version 1.1
  *
- * Copyright (c) 2000-2002 The Apache Software Foundation.  All rights
+ * Copyright (c) 2000-2003 The Apache Software Foundation.  All rights
  * reserved.
  *
  * Redistribution and use in source and binary forms, with or without
@@ -255,6 +255,7 @@ public class Chmod extends ExecuteOn {
     }
 
     protected boolean isValidOs() {
-        return Os.isFamily("unix") && super.isValidOs();
+        return (Os.isFamily("unix") || Os.isFamily("tandem")) 
+            && super.isValidOs();
     }
 }
